--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social_title: 我的社交
 social:
   github: https://github.com/iq9891
   weibo: http://weibo.com/magnum01
-  zhihu: http://www.zhihu.com/people/giscafer
+  zhihu: http://zhihu.com/people/lerb
   email: '649076408@qq.com'
 
 
